pantry: implement snapshot
